docs: mark testing tasks as completed